khanh push code

--- a/assets/css/sanacc/css_header_new.css
+++ b/assets/css/sanacc/css_header_new.css
@@ -150,6 +150,33 @@ span.text_box_header {
     width: calc(100% / 7);
     justify-content: center;
 }
+.box_menu .text_tool {
+    visibility: hidden;
+    width: 100px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 3px 0;
+    position: absolute;
+    z-index: 1;
+    top: 95%;
+    left: 50%;
+    margin-left: -60px;
+}
+.box_menu .text_tool::after {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent black transparent;
+}
+.box_menu:hover .text_tool {
+    visibility: visible;
+}
 
 .box_menu span {
     font-weight: 400;
